updates using mock data and user profile and sleceted user view

--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -1,1 +1,38 @@
-<p>main-content works!</p>
+<h1>Helpers</h1>
+<div class="line"></div>
+
+<div class="content">
+  <div class="functions">
+    <div class="left">
+      <button class="icon-btn sort" title="Sort">
+        <mat-icon>unfold_more</mat-icon>
+      </button>
+
+      <button class="icon-btn filter" title="Filter">
+        <mat-icon>filter_list</mat-icon>
+      </button>
+
+      <button class="icon-btn calendar" title="Calendar">
+        <mat-icon>calendar_today</mat-icon>
+      </button>
+
+      <div class="search-wrapper">
+        <mat-icon class="search-icon">search</mat-icon>
+        <input type="text" placeholder="Search by name, ID or phone" />
+      </div>
+
+      <div class="users">8 helpers</div>
+    </div>
+
+    <div class="right">
+      <button class="icon-btn download" title="Download">
+        <mat-icon>download</mat-icon>
+      </button>
+
+      <button class="add-helper">
+        <mat-icon>add</mat-icon> Add Helper
+      </button>
+    </div>
+  </div>
+  <app-helpers></app-helpers>
+</div>
