--- a/src/app/components/sidebar/search/search.component.html
+++ b/src/app/components/sidebar/search/search.component.html
@@ -1,1 +1,4 @@
-<p>search works!</p>
+<div class="search-box">
+  <span class="search-icon">🔍</span>
+  <input type="text" placeholder="Search" />
+</div>
