--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,131 +1,151 @@
 <div class="sidebar-container">
-  <h1>Manage</h1>
-  <h4>by ASBL Homes</h4>
-  <app-search></app-search>
+  <div class="sidebar-scrollable">
+    <!-- Sidebar content here like menu items -->
+    <h1>Manage</h1>
+    <h6>by ASBL Homes</h6>
+    <app-search></app-search>
 
-  <!-- RESIDENT MANAGEMENT -->
-  <mat-nav-list>
-    <mat-list-item (click)="toggleMenu('resident')">
-      <div class="menu-header">
-        <mat-icon [class.rotated]="openStates['resident']" class="arrow-icon">expand_more</mat-icon>
-        <span class="menu-label">RESIDENT MANAGEMENT</span>
+    <!-- RESIDENT MANAGEMENT -->
+    <mat-nav-list>
+      <mat-list-item (click)="toggleMenu('resident')">
+        <div class="menu-header">
+          <mat-icon [class.rotated]="!openStates['resident']" class="arrow-icon"
+            >expand_more</mat-icon
+          >
+          <span class="menu-label">RESIDENT MANAGEMENT</span>
+        </div>
+      </mat-list-item>
+      <div *ngIf="!openStates['resident']" class="submenu">
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">home</mat-icon>
+            <span>Flats</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">build</mat-icon>
+            <span>Helpdesk Setup</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">report</mat-icon>
+            <span>Helpdesk Tickets</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">construction</mat-icon>
+            <span>Renovation Works</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">error</mat-icon>
+            <span>Violation Setup</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">sports_soccer</mat-icon>
+            <span>Amenities</span>
+          </div>
+        </mat-list-item>
       </div>
-    </mat-list-item>
-    <div *ngIf="openStates['resident']" class="submenu">
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">home</mat-icon>
-          <span>Flats</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">build</mat-icon>
-          <span>Helpdesk Setup</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">report</mat-icon>
-          <span>Helpdesk Tickets</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">construction</mat-icon>
-          <span>Renovation Works</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">error</mat-icon>
-          <span>Violation Setup</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">sports_soccer</mat-icon>
-          <span>Amenities</span>
-        </div>
-      </mat-list-item>
-    </div>
-  </mat-nav-list>
+    </mat-nav-list>
 
-  <!-- STAFF MANAGEMENT -->
-  <mat-nav-list>
-    <mat-list-item (click)="toggleMenu('staff')">
-      <div class="menu-header">
-        <mat-icon [class.rotated]="openStates['staff']" class="arrow-icon">expand_more</mat-icon>
-        <span class="menu-label">STAFF MANAGEMENT</span>
+    <!-- STAFF MANAGEMENT -->
+    <mat-nav-list>
+      <mat-list-item (click)="toggleMenu('staff')">
+        <div class="menu-header">
+          <mat-icon [class.rotated]="!openStates['staff']" class="arrow-icon"
+            >expand_more</mat-icon
+          >
+          <span class="menu-label">STAFF MANAGEMENT</span>
+        </div>
+      </mat-list-item>
+      <div *ngIf="!openStates['staff']" class="submenu">
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">badge</mat-icon>
+            <span>Roles & Departments</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">group</mat-icon>
+            <span>Staff Directory</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">person</mat-icon>
+            <span>Helpers</span>
+          </div>
+        </mat-list-item>
       </div>
-    </mat-list-item>
-    <div *ngIf="openStates['staff']" class="submenu">
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">badge</mat-icon>
-          <span>Roles & Departments</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">group</mat-icon>
-          <span>Staff Directory</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">person</mat-icon>
-          <span>Helpers</span>
-        </div>
-      </mat-list-item>
-    </div>
-  </mat-nav-list>
+    </mat-nav-list>
 
-  <!-- WORK MANAGEMENT -->
-  <mat-nav-list>
-    <mat-list-item (click)="toggleMenu('work')">
-      <div class="menu-header">
-        <mat-icon [class.rotated]="openStates['work']" class="arrow-icon">expand_more</mat-icon>
-        <span class="menu-label">WORK MANAGEMENT</span>
+    <!-- WORK MANAGEMENT -->
+    <mat-nav-list>
+      <mat-list-item (click)="toggleMenu('work')">
+        <div class="menu-header">
+          <mat-icon [class.rotated]="!openStates['work']" class="arrow-icon"
+            >expand_more</mat-icon
+          >
+          <span class="menu-label">WORK MANAGEMENT</span>
+        </div>
+      </mat-list-item>
+      <div *ngIf="!openStates['work']" class="submenu">
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">build_circle</mat-icon>
+            <span>Assets</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">place</mat-icon>
+            <span>Locations</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">layers</mat-icon>
+            <span>Work Packages</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">event</mat-icon>
+            <span>Work Scheduler</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">history</mat-icon>
+            <span>Work Logs</span>
+          </div>
+        </mat-list-item>
+        <mat-list-item routerLink="#">
+          <div class="submenu-item">
+            <mat-icon class="submenu-icon">report_problem</mat-icon>
+            <span>Issues</span>
+          </div>
+        </mat-list-item>
       </div>
-    </mat-list-item>
-    <div *ngIf="openStates['work']" class="submenu">
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">build_circle</mat-icon>
-          <span>Assets</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">place</mat-icon>
-          <span>Locations</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">layers</mat-icon>
-          <span>Work Packages</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">event</mat-icon>
-          <span>Work Scheduler</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">history</mat-icon>
-          <span>Work Logs</span>
-        </div>
-      </mat-list-item>
-      <mat-list-item routerLink="#">
-        <div class="submenu-item">
-          <mat-icon class="submenu-icon">report_problem</mat-icon>
-          <span>Issues</span>
-        </div>
-      </mat-list-item>
+    </mat-nav-list>
+  </div>
+  <div class="sidebar-user">
+    <div class="left">
+      <div class="logo">US</div>
     </div>
-  </mat-nav-list>
+    <div class="right">
+      <h2>User</h2>
+      <p>ASBL Springs</p>
+    </div>
+    <div class="arrow">&gt;</div>
+  </div>
 </div>
+
