--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,21 +1,30 @@
 .sidebar-container {
-  padding: 1px;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  overflow-y: auto;
   background-color: #fafafa;
 }
 
-h1 {
-  font-size: 20px;
-  margin-bottom: 4px;
-  color: #333;
+.sidebar-scrollable {
+  overflow-y: auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-h4 {
-  font-size: 14px;
-  margin-bottom: 16px;
-  color: #888;
+
+h1 {
+  font-size: 30px;
+  margin-bottom: 0px; 
+  color: black;
+  font-style: bold;
 }
+
+h6 {
+  margin-top: 0;   
+  color: black;
+}
+
 
 .arrow-icon {
   transition: transform 0.2s ease-in-out;
@@ -69,5 +78,53 @@ h4 {
       border-radius: 4px;
       padding: 4px;
     }
+  }
+}
+.sidebar-user {
+  margin-top: auto; // Pushes this div to the bottom of column
+  display: flex;
+  align-items: center;
+  padding: 12px 16px;
+  background-color: #f5f5f5;
+  margin-bottom: 15px;
+  border-top: 1px solid #ddd;
+
+  .left {
+    .logo {
+      width: 40px;
+      height: 40px;
+      background-color: #3f51b5;
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 16px;
+      margin-right: 12px;
+    }
+  }
+
+  .right {
+    flex: 1;
+
+    h2 {
+      margin: 0;
+      font-size: 14px;
+      font-weight: 600;
+      color: #333;
+    }
+
+    p {
+      margin: 0;
+      font-size: 12px;
+      color: #777;
+    }
+  }
+
+  .arrow {
+    font-size: 16px;
+    color: #999;
+    margin-left: auto;
   }
 }
