done with very basic routing and ui modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   </aside>
 
   <main class="main-content">
-    <app-main-content></app-main-content>
+    <!-- <app-main-content></app-main-content> -->
+    <router-outlet></router-outlet>
   </main>
 </div>
