--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -29,7 +29,7 @@
         <mat-icon>download</mat-icon>
       </button>
 
-      <button class="add-helper">
+      <button class="add-helper" [routerLink]="['/helpers/add']">
         <mat-icon>add</mat-icon> Add Helper
       </button>
     </div>
