done with the ui of add helper sections

--- a/src/app/components/add-helper/add-helper.component.html
+++ b/src/app/components/add-helper/add-helper.component.html
@@ -6,6 +6,7 @@
 
   <div class="body">
     <!-- Stepper Section -->
+     <div class="sidebarContainer">
     <div class="sideBar">
       <div class="stepper-wrapper">
         <!-- Vertical Line -->
@@ -31,6 +32,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
 
     <!-- Content Section -->
