completed the ui of adding helpers

--- a/src/app/components/add-helper/add-helper.component.scss
+++ b/src/app/components/add-helper/add-helper.component.scss
@@ -4,6 +4,17 @@
   flex-direction: column;
 }
 
+.sidebarContainer {
+  width: 25%;
+  background-color: #f0f0f0; // light grey background
+  border-radius: 8px;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  height: 400px; // Increased height
+}
+
 .top-bar {
   display: flex;
   align-items: center;
@@ -34,16 +45,16 @@
   .stepper-wrapper {
     position: relative;
     height: 100%;
-    min-height: 300px; // optional, adjust if needed
+    height: 300px; // keeps stepper at minimum height
     padding-left: 1px;
+    margin-top: 15px;
   }
-  
 
   .vertical-line {
     position: absolute;
     left: 6px;
-    top: 21px;     // aligns with center of first dot (dot is 16px)
-    bottom: 1px;  // aligns with center of last dot
+    top: 21px; // aligns with center of first dot
+    bottom: 1px; // aligns with center of last dot
     width: 4px;
     height: 300px;
     background-color: #ccc;
@@ -69,7 +80,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    transform: translateY(-8px); // center dot on top position
+    transform: translateY(-8px); // center dot on step
 
     .dot {
       width: 16px;
@@ -125,3 +136,4 @@
     }
   }
 }
+
