--- a/src/app/components/add-helper/sections/documents/documents.component.html
+++ b/src/app/components/add-helper/sections/documents/documents.component.html
@@ -1,1 +1,6 @@
-<p>documents works!</p>
+<h1>Additional Documents</h1>
+<p>Upload related documents.This step is optional.</p>
+
+<div class="doc-upload">
+  <button>+</button>
+</div>
