done with mat dialog box ui

--- a/src/app/components/add-helper/sections/documents/documents.component.html
+++ b/src/app/components/add-helper/sections/documents/documents.component.html
@@ -1,6 +1,6 @@
 <h1>Additional Documents</h1>
 <p>Upload related documents.This step is optional.</p>
 
-<div class="doc-upload">
+<div class="doc-upload" (click)="openUploadDialog()">
   <button>+</button>
 </div>
