--- a/src/app/components/add-helper/sections/documents/documents.component.scss
+++ b/src/app/components/add-helper/sections/documents/documents.component.scss
@@ -1,5 +1,5 @@
-.doc-upload{
-    width: 120px;
+.doc-upload {
+  width: 120px;
   height: 120px;
   border: 2px dotted #3f51b5;
   background-color: #e8eaf6;
@@ -15,5 +15,18 @@
     border: none;
     color: #3f51b5;
     cursor: pointer;
+  }
+}
+
+.uploaded-indicator {
+  display: flex;
+  align-items: center;
+  color: red;
+  border-radius: 20px;
+  font-size: 14px;
+  mat-icon {
+    font-size: 40px;
+    height: 30px;
+    width: 45px;
   }
 }
