--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
@@ -154,6 +154,25 @@ label {
   }
 }
 
+// .kyc-upload {
+//   width: 120px;
+//   height: 120px;
+//   border: 2px dotted #3f51b5;
+//   background-color: #e8eaf6;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   margin-top: 8px;
+
+//   button {
+//     font-size: 28px;
+//     font-weight: bold;
+//     background: none;
+//     border: none;
+//     color: #3f51b5;
+//     cursor: pointer;
+//   }
+// }
 .kyc-upload {
   width: 120px;
   height: 120px;
@@ -162,15 +181,27 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 8px;
+  margin-top: 10px;
 
   button {
-    font-size: 28px;
-    font-weight: bold;
-    background: none;
-    border: none;
     color: #3f51b5;
+    border: none;
+    background: none;
+    font-weight: bold;
+    font-size: 28px;
     cursor: pointer;
+  }
+}
+.uploaded-indicator {
+  display: flex;
+  align-items: center;
+  color: red;
+  border-radius: 20px;
+  font-size: 14px;
+  mat-icon {
+    font-size: 40px;
+    height: 30px;
+    width: 45px;
   }
 }
 
