--- a/src/app/components/main-content/helpers/helpers.component.scss
+++ b/src/app/components/main-content/helpers/helpers.component.scss
@@ -27,11 +27,30 @@
       background-color: #e0f7fa;
     }
 
-    .profile-img {
+    .profile-img-wrapper {
       width: 48px;
       height: 48px;
       border-radius: 50%;
       margin-right: 10px;
+      overflow: hidden;
+      background-color: #90caf9;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .profile-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%; // in case img has sharp edges
+      }
+
+      .profile-initials {
+        font-size: 16px;
+        font-weight: bold;
+        color: #fff;
+        text-transform: uppercase;
+      }
     }
 
     .profile-details {
@@ -60,22 +79,20 @@
   background-color: #f5f5f5;
   border-radius: 15px;
   padding: 5px;
-  height: 80vh; 
+  height: 80vh;
   display: flex;
-  align-items: center;       
-  justify-content: center;   
-  overflow: hidden;          
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
-
 
 .selectedHelper {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;   
+  width: auto;
   height: auto;
   padding: 0;
   margin-top: 35px;
 }
-
