--- a/src/app/components/main-content/selected-helper/selected-helper.component.scss
+++ b/src/app/components/main-content/selected-helper/selected-helper.component.scss
@@ -9,11 +9,25 @@
     align-items: center;
     gap: 15px;
 
-    .selected-img {
+    .selected-img img {
       width: 64px;
       height: 64px;
       border-radius: 50%;
       object-fit: cover;
+    }
+
+    .initials-img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      background-color: #90caf9; // light blue
+      color: #fff;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      text-transform: uppercase;
     }
 
     h2 {
@@ -97,5 +111,3 @@
   max-width: 100%;
   width: 800px; // or adjust as needed
 }
-
-
