Implement redirect to first helper ID and update navigation links

--- a/src/app/components/add-helper/add-helper.component.html
+++ b/src/app/components/add-helper/add-helper.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="top-bar">
-    <span class="back-arrow" [routerLink]="['/helpers/1']">&lt;</span>
+    <span class="back-arrow" [routerLink]="['']">&lt;</span>
     <span class="page-title">Add Helper</span>
   </div>
 
