--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.html
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.html
@@ -179,7 +179,7 @@
   </mat-form-field>
 
   <!-- Vehicle Number (Conditional) -->
-  <div *ngIf="showPhoneField" style="margin-top: 16px">
+  <div *ngIf="showVehicleField" style="margin-top: 16px">
     <label for="vehicleNumber">Vehicle Number <span>*</span></label>
     <div class="vehicle-wrapper">
       <input
