--- a/src/app/components/add-helper/sections/upload-dialog/upload-dialog.component.html
+++ b/src/app/components/add-helper/sections/upload-dialog/upload-dialog.component.html
@@ -20,6 +20,7 @@
   <input
     type="file"
     #fileInput
+    accept=".pdf"
     (change)="onFileSelected($event)"
     style="display: none"
   />
