--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<mat-progress-bar
+  *ngIf="loading"
+  mode="indeterminate"
+  color="primary"
+></mat-progress-bar>
 <div class="layout-container">
   <aside class="sidebar">
     <app-sidebar></app-sidebar>
