--- a/src/app/components/main-content/selected-helper/selected-helper.component.html
+++ b/src/app/components/main-content/selected-helper/selected-helper.component.html
@@ -78,7 +78,7 @@
 
       <div class="field">
         <label>Type</label>
-        <div class="value">{{ selectedHelper.type }}</div>
+        <div class="value">{{ selectedHelper.role }}</div>
       </div>
 
       <div class="field">
