--- a/src/app/components/add-helper/sections/documents/documents.component.html
+++ b/src/app/components/add-helper/sections/documents/documents.component.html
@@ -4,9 +4,9 @@
 <div class="doc-upload" (click)="openUploadDialog()">
   <button>+</button>
 </div>
-<div class="uploaded-indicator" *ngIf="form.get('additionalDocument')?.value">
+<div class="uploaded-indicator" *ngIf="form.get('additionalDocument')?.value || fileexistname">
   <mat-icon>picture_as_pdf</mat-icon>
-  <span>{{ form.get("additionalDocument")?.value?.file?.name }} Uploaded</span>
+  <span>{{ form.get("additionalDocument")?.value?.file?.name || fileexistname}} Uploaded</span>
   <button (click)="removeDocument()">Remove</button>
   <button (click)="openUploadDialog()">Change</button>
 </div>
