Refactor document handling in add-helper component to use fileName instead of File object, improving clarity and consistency in form data management

--- a/src/app/components/add-helper/sections/documents/documents.component.html
+++ b/src/app/components/add-helper/sections/documents/documents.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="uploaded-indicator" *ngIf="form.get('additionalDocument')?.value || fileexistname">
   <mat-icon>picture_as_pdf</mat-icon>
-  <span>{{ form.get("additionalDocument")?.value?.file?.name || fileexistname}} Uploaded</span>
+  <span>{{ form.get("additionalDocument")?.value?.fileName || fileexistname}} Uploaded</span>
   <button (click)="removeDocument()">Remove</button>
   <button (click)="openUploadDialog()">Change</button>
 </div>
